@@ -8,10 +8,10 @@ import org.slf4j.LoggerFactory;
 
 /**
  * Swing action that defers class loading until invoked.
- * <P>
+ * <p>
  * The "Frame" in the name refers to this class being optimized to create a
  * JFrame when invoked.
- * <P>
+ * <p>
  * This does not manage the JFrame instance; if you invoke this twice, you get
  * two JFrame objects.
  *
@@ -29,10 +29,11 @@ abstract public class AbstractFrameAction extends AbstractAction {
     @Override
     public void actionPerformed(ActionEvent e) {
         try {
-            JFrame f = (JFrame) Class.forName(className).newInstance();
+            JFrame f = (JFrame) Class.forName(className).getDeclaredConstructor().newInstance();
             f.setVisible(true);
-        } catch (Exception ex) {
-            log.error("Error starting JFrame " + className + ": " + ex);
+        } catch (ClassNotFoundException | NoSuchMethodException | InstantiationException 
+                    | IllegalAccessException | java.lang.reflect.InvocationTargetException ex) {
+            log.error("Error starting JFrame {}", className, ex);
         }
     }
     private final static Logger log = LoggerFactory.getLogger(AbstractFrameAction.class);
